# ebb

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
docs/: Architecture.md  TODO.md
src/: main.rs
src/backend/: mod.rs  s3.rs
src/backends/: mod.rs  s3.rs  shared.rs
src/command/: add.rs  init.rs
src/commands/: about.md  add.rs  build.rs  init.rs  new.rs
src/format/: mod.rs
src/lib/: about.md  conf.rs  input.rs  io.rs  mod.rs  prompt.rs  prompt2.rs  run.rs
src/templates/: wrapper.html
