[package]
name = "ebb"
version = "0.1.0"
authors = ["Dan Stewart <github@mail.danstewart.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "3.0.1"
